--- a/angie-date-picker.css
+++ b/angie-date-picker.css
@@ -15,12 +15,12 @@ date-picker {display: block;}
 .ngldp__current-year {font-weight: 600; padding: 0 5px;}
 .ngldp__current-month:after {content: ''; display: table-cell; width: 9999px;}
 
-.ngldp__btn {background: none; display: inline-block; border: none; background: #24b685; color: white; height: 30px; padding: 0 15px; margin: 0; border-radius: 2px; cursor: pointer;}
+.ngldp__btn {background: none; display: inline-block; vertical-align: top; border: none; background: #24b685; color: white; height: 30px; padding: 0 15px; margin: 0; border-radius: 2px; cursor: pointer;}
 .ngldp__btn:focus {outline: none;}
 .ngldp__btn--prev,
 .ngldp__btn--next {font-size: 0; width: 36px; height: 36px; border-radius: 0; background-position: center center; background-repeat: no-repeat;}
 .ngldp__btn--next:after,
-.ngldp__btn--prev:after {content: ''; display: inline-block; border: 5px solid transparent;}
+.ngldp__btn--prev:after {content: ''; display: inline-block; vertical-align: middle; border: 5px solid transparent;}
 .ngldp__btn--next:after {border-left-color: white; border-right-width: 0;}
 .ngldp__btn--prev:after {border-right-color: white; border-left-width: 0; }
 
